RESOLVED FIXED268434
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::addTopLayerElement
https://bugs.webkit.org/show_bug.cgi?id=268434
Summary CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::addTo...
Tim Nguyen (:ntim)
Reported 2024-01-30 19:53:17 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2024-01-31 16:14:20 PST
EWS
Comment 2 2024-01-31 21:57:15 PST
Committed 273885@main (de15933efb3d): <https://commits.webkit.org/273885@main> Reviewed commits have been landed. Closing PR #23627 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.