CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::addTopLayerElement https://bugs.webkit.org/show_bug.cgi?id=268434 rdar://117975912

Reviewed by Chris Dumez.

The release assertion here is bogus, the top layer is a DOM construct that is used for various DOM algorithms, not just a rendering one.

Things in the top layer are not required to be rendered.

* LayoutTests/fullscreen/fullscreen-add-disconnected-to-top-layer-expected.txt: Added.
* LayoutTests/fullscreen/fullscreen-add-disconnected-to-top-layer.html: Added.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::addTopLayerElement):

Canonical link: https://commits.webkit.org/273885@main